; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/symdump/extr_symdump.c_DumpArray.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/symdump/extr_symdump.c_DumpArray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@TI_GET_TYPE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DumpArray(i32 %0, %struct.TYPE_4__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @TI_GET_TYPE, align 4
  %17 = call i32 @SymGetTypeInfo(i32 %11, i32 %14, i32 %15, i32 %16, i32* %8)
  %18 = load i32, i32* %8, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @FALSE, align 4
  %22 = call i32 @DumpType(i32 %18, %struct.TYPE_4__* %19, i32 %20, i32 %21)
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @SymGetTypeInfo(i32, i32, i32, i32, i32*) #1

declare dso_local i32 @DumpType(i32, %struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
